<resources>
    <string name="app_name">LessonSecond_GeekBrains</string>
    <string name="cities">Cities</string>
    <string name="settings">Settings</string>
    <string name="zeroTemp"> 0° </string>
    <string name="zeroTime">00:00</string>
    <string name="defaultCity">Khabarovsk</string>
    <string name="zeroWind">Что-то про ветер и давление</string>
    <string name="feelsLike">feels like</string>

    <string name="app_id">b985dff9-b536-46fc-8677-f06c5f457dda</string>
    <string name="tempLike">0°</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
